--- a/css/styles.css
+++ b/css/styles.css
@@ -813,6 +813,9 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     .modal {
         position: absolute;
+        display: flex;
+        justify-content: flex-end;
+
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
@@ -820,9 +823,33 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         background-color: #fff;
         width: 528px;
         height: 581px;
+
+        padding: 8px;
     }
     
-    .modal-btn {
+    .modal-btn{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        width: 30px;
+        height: 30px;
+
+        border-radius: 50%;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        
+        background-position: 50% 50%;
+        background-color: #ffffff;
+        cursor: pointer;
+        background-size:cover;
+    }
+
+
+.icon-close {
+    
+}
+
+    /* .modal-btn {
         position: absolute;
         right: 8px;
         top: 8px;
@@ -833,14 +860,19 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
         border-radius: 50%;
         fill: #EEEEEE;
-        border: 1px solid rgba(0, 0, 0, 0.1);
+        /* border: 1px solid rgba(0, 0, 0, 0.1); */
         cursor: pointer;
         padding: 0;
 
 
     }
+.icon-close{
 
-   
+
+    outline: 1px solid blue;
+    
+    
+} */
     
     /* .icon-close {
        display: flex;
