--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,8 @@ ul {
 
 .header-link {
     color: var(--main-title-color);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-link.underline::after {
     content: '';
@@ -103,6 +105,10 @@ ul {
     gap: 10px;
     align-items: center;
     color: var(--main-text-color);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    
 }
 
 .accent-logo {
@@ -118,14 +124,11 @@ ul {
 .header-link:focus {
     color: var(--main-focus-color);
 
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-cont-link:hover .header-icon,
 .header-cont-link:focus .header-icon{
     fill: var(--main-focus-color);
-
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -215,12 +218,12 @@ ul {
     border-radius: 4px;
     border: 0;
     padding: 10px 32px;
+
+    transition: bacground-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover {
 background-color: rgba(255, 255, 255, 0.6);
-
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* -----------------ADVANTAGES----------------- */
@@ -280,10 +283,6 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-bottom: 30px;
 }
 
-.advantages-logo{
-    
-
-}
 
 
 /* -----------------WORKS----------------- */
@@ -422,25 +421,25 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: transparent;
     align-items: center;
     justify-content: center;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-social-icon {
     fill: var(--main-icon-color);
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
 .team-social-link:hover,
 .team-social-link:focus {
     background-color: var(--main-focus-color);
-
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-social-link:hover .team-social-icon,
 .team-social-link:focus .team-social-icon {
     fill: var(--main-accent-color);
-
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -480,6 +479,8 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     align-items: center;
     justify-content: center;
     display: flex;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -487,20 +488,18 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: var(--main-icon-color);
     align-items: center;
     justify-content: center;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
 .regular-cust-link:hover,
 .regular-cust-link:focus {
     border-color: var(--main-focus-color);
-
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .regular-cust-link:hover .regular-cust-icon,
 .regular-cust-link:focus .regular-cust-icon{
     fill: var(--main-focus-color);
-
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -554,14 +553,15 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: inline-block;
     margin-top: 9px;
     color: rgba(255, 255, 255, 0.6);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover,
  .footer-link:focus {
     color: var(--main-focus-color);
-
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .footer-soc-container{
     text-align: left;
     /* font-weight: 700;
@@ -602,7 +602,8 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background: rgba(255, 255, 255, 0.1);
     align-items: center;
     justify-content: center;
-}
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 .footer-soc-icon {
     fill: var(--main-accent-color);
@@ -610,8 +611,6 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .footer-soc-link:hover{
     background-color: var(--main-focus-color);
-
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -653,6 +652,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #F5F4FA;
     padding: 6px 22px;
 
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), olor 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:hover,
@@ -687,6 +687,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     letter-spacing: 0.03em;
     color: var(--main-text-color);
 }
+
 .container-gallery-item {
     padding: 20px 24px;
     
@@ -695,6 +696,8 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .gallery-item {
     /* position: relative; */
     border: 1px solid #EEEEEE;
+    max-width: 370px;
+    
 }
 
 .gallery-item:hover,
@@ -704,10 +707,6 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
     0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-
 }
 
 .gallery-item:hover .gallery-overlay-dascription,
@@ -716,7 +715,6 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 1;
     z-index: 2;
 
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .gallery-overlay{
@@ -750,6 +748,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     z-index: 1;
 
     transform: translateY(100%);
+
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -804,11 +803,19 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     height: 100%;
 
     opacity: 1;
-    }
+
+    /* transition-property: opacity;
+    transition-duration: 7s;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
+    /* transition: opasity, 7s, cubic-bezier(0.4, 0, 0.2, 1); */
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
 
 .backdrop.is-hidden{
     opacity: 0;
     pointer-events: none;
+    
 }
 
     .modal {
@@ -823,8 +830,12 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         background-color: #fff;
         width: 528px;
         height: 581px;
+        border-radius: 4px;
 
         padding: 8px;
+
+        /* transition: transform 5s cubic-bezier(0.4, 0, 0.2, 1); */
+
     }
     
     .modal-btn{
@@ -842,6 +853,8 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         background-color: #ffffff;
         cursor: pointer;
         background-size:cover;
+
+        
     }
 
 
@@ -861,18 +874,12 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         border-radius: 50%;
         fill: #EEEEEE;
         /* border: 1px solid rgba(0, 0, 0, 0.1); */
-        cursor: pointer;
+        /* cursor: pointer;
         padding: 0;
 
 
-    }
-.icon-close{
+    } */
 
-
-    outline: 1px solid blue;
-    
-    
-} */
     
     /* .icon-close {
        display: flex;
