--- a/css/styles.css
+++ b/css/styles.css
@@ -749,7 +749,11 @@ background-color: rgba(255, 255, 255, 0.6);
 
     transform: translateY(100%);
 
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: transform;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 2500ms;
+
+    /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .description{
